--- a/plugins/elementor/css/post-869.css
+++ b/plugins/elementor/css/post-869.css
@@ -4,40 +4,50 @@
 	--overlay-opacity: 0.5;
 }
 
-.elementor-869 .elementor-element.elementor-element-8311e6b:not(.elementor-motion-effects-element-type-background),
-.elementor-869 .elementor-element.elementor-element-8311e6b>.elementor-motion-effects-container>.elementor-motion-effects-layer {
+.elementor-869 .elementor-element.elementor-element-8311e6b:not(.elementor-motion-effects-element-type-background), .elementor-869 .elementor-element.elementor-element-8311e6b > .elementor-motion-effects-container > .elementor-motion-effects-layer {
 	background-color: transparent;
 	background-image: linear-gradient(180deg, #FFFFFF 0%, #f2295b 100%);
 }
 
-.elementor-869 .elementor-element.elementor-element-8311e6b::before,
-.elementor-869 .elementor-element.elementor-element-8311e6b>.elementor-background-video-container::before,
-.elementor-869 .elementor-element.elementor-element-8311e6b>.e-con-inner>.elementor-background-video-container::before,
-.elementor-869 .elementor-element.elementor-element-8311e6b>.elementor-background-slideshow::before,
-.elementor-869 .elementor-element.elementor-element-8311e6b>.e-con-inner>.elementor-background-slideshow::before,
-.elementor-869 .elementor-element.elementor-element-8311e6b>.elementor-motion-effects-container>.elementor-motion-effects-layer::before {
+.elementor-869 .elementor-element.elementor-element-8311e6b::before, .elementor-869 .elementor-element.elementor-element-8311e6b > .elementor-background-video-container::before, .elementor-869 .elementor-element.elementor-element-8311e6b > .e-con-inner > .elementor-background-video-container::before, .elementor-869 .elementor-element.elementor-element-8311e6b > .elementor-background-slideshow::before, .elementor-869 .elementor-element.elementor-element-8311e6b > .e-con-inner > .elementor-background-slideshow::before, .elementor-869 .elementor-element.elementor-element-8311e6b > .elementor-motion-effects-container > .elementor-motion-effects-layer::before {
 	--background-overlay: '';
 	background-image: url("https://raw.githubusercontent.com/asdfgn2399/Dungeons-and-Dorks/main/_img/dice-7854512_640.jpg");
 }
 
-.elementor-869 .elementor-element.elementor-element-8311e6b,
-.elementor-869 .elementor-element.elementor-element-8311e6b::before {
+.elementor-869 .elementor-element.elementor-element-8311e6b, .elementor-869 .elementor-element.elementor-element-8311e6b::before {
 	--border-transition: 0.3s;
 }
 
 .elementor-869 .elementor-element.elementor-element-ea79596 {
-	width: var(--container-widget-width, 46.308%);
+	width: var( --container-widget-width, 46.308% );
 	max-width: 46.308%;
 	--container-widget-width: 46.308%;
 	--container-widget-flex-grow: 0;
 }
 
 .elementor-869 .elementor-element.elementor-element-ea79596.elementor-element {
+	--align-self: center;
 	--flex-grow: 0;
 	--flex-shrink: 0;
 }
 
-.elementor-869 .elementor-element.elementor-element-ea79596>.elementor-widget-container {
+.elementor-869 .elementor-element.elementor-element-ea79596 > .elementor-widget-container {
 	background-color: transparent;
 	background-image: linear-gradient(180deg, #FFFFFF 0%, #FFFFFF 100%);
+}
+
+.elementor-869 .elementor-element.elementor-element-327c966 {
+	--display: flex;
+	--background-transition: 0.3s;
+}
+
+.elementor-869 .elementor-element.elementor-element-83a25af {
+	color: var( --e-global-color-secondary );
+	font-family: "Belgrano", Sans-serif;
+}
+
+@media(min-width: 768px) {
+	.elementor-869 .elementor-element.elementor-element-327c966 {
+			--content-width:1051px;
+	}
 }
